--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">tinkoff-homework</string>
+    <string name="first">first part</string>
+    <string name="second">second part</string>
+    <string name="search">search</string>
+    <string name="start">start!</string>
 </resources>
